[project]
name = "BiaSED"
version = "0.0.1"
authors = [
  { name="Kai Wang", email="52523e@kai-wang.com" },
]
description = "BiaSED is a curvilinear expansion demo"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"